crates/syntax/tests/snapshots/parser__parser_else-if.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..35,
        statements: StatementList {
            span: 0..35,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                Expression(
                    ExpressionStatement {
                        span: 0..35,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        attributes: [],
                        expression: If(
                            If {
                                span: 0..35,
                                if_span: 0..2,
                                extras: ItemExtras {
                                    leading: [],
                                    trailing: [],
                                },
                                condition: BinaryOperation(
                                    BinaryOperation {
                                        span: 3..8,
                                        lhs: QualifiedName(
                                            QualifiedName {
                                                span: 3..4,
                                                extras: ItemExtras {
                                                    leading: [],
                                                    trailing: [],
                                                },
                                                parts: [
                                                    Identifier {
                                                        span: 3..4,
                                                        name: "a",
                                                    },
                                                ],
                                            },
                                        ),
                                        operation: Operator {
                                            span: 4..6,
                                            operation: GreaterThan,
                                        },
                                        rhs: Literal(
                                            Literal {
                                                span: 7..8,
                                                extras: ItemExtras {
                                                    leading: [],
                                                    trailing: [],
                                                },
                                                literal: Integer(
                                                    IntegerLiteral {
                                                        span: 7..8,
                                                        value: 1,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ),
                                body: StatementList {
                                    span: 11..13,
                                    extras: ItemExtras {
                                        leading: [],
                                        trailing: [],
                                    },
                                    statements: [],
                                    tail: Some(
                                        Expression(
                                            ExpressionStatement {
                                                span: 11..12,
                                                extras: ItemExtras {
                                                    leading: [],
                                                    trailing: [],
                                                },
                                                attributes: [],
                                                expression: Literal(
                                                    Literal {
                                                        span: 11..12,
                                                        extras: ItemExtras {
                                                            leading: [],
                                                            trailing: [],
                                                        },
                                                        literal: Integer(
                                                            IntegerLiteral {
                                                                span: 11..12,
                                                                value: 3,
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                },
                                next_if_span: Some(
                                    15..19,
                                ),
                                next_if: Some(
                                    If {
                                        span: 20..35,
                                        if_span: 20..22,
                                        extras: ItemExtras {
                                            leading: [],
                                            trailing: [],
                                        },
                                        condition: BinaryOperation(
                                            BinaryOperation {
                                                span: 23..29,
                                                lhs: QualifiedName(
                                                    QualifiedName {
                                                        span: 23..24,
                                                        extras: ItemExtras {
                                                            leading: [],
                                                            trailing: [],
                                                        },
                                                        parts: [
                                                            Identifier {
                                                                span: 23..24,
                                                                name: "a",
                                                            },
                                                        ],
                                                    },
                                                ),
                                                operation: Operator {
                                                    span: 24..26,
                                                    operation: LessThan,
                                                },
                                                rhs: Literal(
                                                    Literal {
                                                        span: 27..29,
                                                        extras: ItemExtras {
                                                            leading: [],
                                                            trailing: [],
                                                        },
                                                        literal: Integer(
                                                            IntegerLiteral {
                                                                span: 27..29,
                                                                value: -1,
                                                            },
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                        body: StatementList {
                                            span: 32..34,
                                            extras: ItemExtras {
                                                leading: [],
                                                trailing: [],
                                            },
                                            statements: [],
                                            tail: Some(
                                                Expression(
                                                    ExpressionStatement {
                                                        span: 32..33,
                                                        extras: ItemExtras {
                                                            leading: [],
                                                            trailing: [],
                                                        },
                                                        attributes: [],
                                                        expression: Literal(
                                                            Literal {
                                                                span: 32..33,
                                                                extras: ItemExtras {
                                                                    leading: [],
                                                                    trailing: [],
                                                                },
                                                                literal: Integer(
                                                                    IntegerLiteral {
                                                                        span: 32..33,
                                                                        value: 1,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    },
                                                ),
                                            ),
                                        },
                                        next_if_span: None,
                                        next_if: None,
                                        else_span: None,
                                        else_body: None,
                                    },
                                ),
                                else_span: None,
                                else_body: None,
                            },
                        ),
                    },
                ),
            ],
            tail: None,
        },
    },
)
