crates/syntax/tests/snapshots/parser__parser_escaped bracket string.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..35,
        statements: StatementList {
            span: 0..35,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [],
            tail: Some(
                Expression(
                    ExpressionStatement {
                        span: 0..35,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        attributes: [],
                        expression: Literal(
                            Literal {
                                span: 0..35,
                                extras: ItemExtras {
                                    leading: [],
                                    trailing: [],
                                },
                                literal: String(
                                    StringLiteral {
                                        span: 0..35,
                                        content: "string { with } escaped bracket",
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ),
        },
    },
)
