crates/syntax/tests/snapshots/parser__parser_escaped quote string.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..36,
        statements: StatementList {
            span: 0..36,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [],
            tail: Some(
                Expression(
                    ExpressionStatement {
                        span: 0..36,
                        extras: ItemExtras {
                            leading: [],
                            trailing: [],
                        },
                        attributes: [],
                        expression: Literal(
                            Literal {
                                span: 0..36,
                                extras: ItemExtras {
                                    leading: [],
                                    trailing: [],
                                },
                                literal: String(
                                    StringLiteral {
                                        span: 0..36,
                                        content: "string \" with \" escaped \\ quotes",
                                    },
                                ),
                            },
                        ),
                    },
                ),
            ),
        },
    },
)
